fix: adjusting and aligned the padding, replaced the line break tag with a paragraph tag

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ p {
 }
 
 .about_me {
-    padding: 1em 10em 1em 2em;
+    padding: 1em 7em 1em 7em;
 }
 
 .skills {
